Added one test for CarService, added exceptions for repositories